hphp/hack/test/typecheck/array/safe_vector_array/disallows_array_of_int_when_array_of_int_to_int_is_required.php.exp
File "disallows_array_of_int_when_array_of_int_to_int_is_required.php", line 6, characters 26-36:
Invalid argument (Typing[4110])
File "disallows_array_of_int_when_array_of_int_to_int_is_required.php", line 3, characters 33-47:
This is an array (used like a hashtable)
File "disallows_array_of_int_when_array_of_int_to_int_is_required.php", line 5, characters 15-24:
It is incompatible with an array (used like a vector)
