hphp/hack/test/typecheck/array/safe_vector_array/disallows_array_of_int_when_array_of_int_to_int_is_required.php
<?hh

function consumeArrayOfIntToInt(darray<int, int> $_): void {}

function test(varray<int> $arrayOfInt): void {
  consumeArrayOfIntToInt($arrayOfInt);
}
